--- a/style.css
+++ b/style.css
@@ -106,16 +106,17 @@ header {
     color: var(--headerFont);
 }
 
-#advancedSearch button {
+#completeSearch {
     align-self: flex-end;
     background-color: var(--headerFont);
     border: none;
     padding: 8px 8px;
     height: 30px;
     margin-bottom: 5px;
+    margin-left: 5px;
 }
 
-#advancedSearch button:hover {
+#completeSearch:hover {
     background-color: var(--SearchButtonHover);
 }
 
@@ -163,7 +164,7 @@ header {
         flex-direction: column;
     }
 
-    #advancedSearch button {
+    #completeSearch {
         align-self: flex-start;
         margin-left: 20px;
     }
@@ -171,5 +172,26 @@ header {
     #cardList img {
         max-width: 200px;
         max-height: 200px;
+    }
+}
+
+@media screen and ((max-width: 360px) or (max-height: 400px)) {
+    
+    #pageContainer {
+        flex-direction: column;
+    }
+
+
+
+    #pageTable {
+        margin-left: 20px;
+        align-self: flex-end;
+    }
+
+    header {
+        padding-left: 12px;
+        padding-right: 12px;
+        padding-top: 0px;
+        padding-bottom: 0px;
     }
 }
